--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,84 @@
-.App {
-  text-align: center;
+.invoice-container {
+  width: 800px;
+  margin: 0 auto;
+  font-family: Arial, sans-serif;
+  border: 1px solid #000;
+  padding: 20px;
+ 
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.invoice-header {
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  border-bottom: 1px solid #000;
+  padding-bottom: 10px;
 }
 
-.App-link {
-  color: #61dafb;
+.header-info div {
+  margin-bottom: 10px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.client-info, .sale-conditions {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+.border{
+  border: 2px solid #000;
+  border-radius: 5px;
+  padding: 5px;
+  font-size: 10px;
+}
+
+.client-info div, .sale-conditions div {
+  display: flex;
+}
+
+.invoice-item input {
+  width: 22%;
+  padding: 5px;
+}
+.invoice-details {
+  border-top: 1px solid #000;
+  border-bottom: 1px solid #000;
+  padding: 10px 0;
+}
+
+.invoice-header {
+  display: flex;
+  justify-content: space-between;
+}
+
+.invoice-item {
+  display: flex;
+  justify-content: space-between;
+}
+
+.invoice-item input {
+  width: 20%;
+}
+
+.invoice-footer {
+  
+  margin-top: 20px;
+}
+
+.invoice-footer div {
+  flex-direction: row;
+  padding-top: 5px;
+  justify-content: end;
+  display: flex;
+
+}
+.Links1{
+  background-color: #8d1212;
+  padding: 5px ;
+  font-family: "Georgia";
+ padding-bottom: 10px;
+}
+.A{
+  background-color: white;
+  padding-bottom: 10px;
 }
