--- a/src/App.css
+++ b/src/App.css
@@ -25,11 +25,32 @@
   margin-top: 20px;
   margin-bottom: 20px;
 }
+.sale-conditions {
+  display: grid;
+	grid-template-columns: repeat(2, 1fr);
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+.sale-conditions h2 {
+font-size: 15px;
+}
+.padding-arriba{
+  padding-top: 15px;
+}
+.padding-arriba input{
+  height: 20px;
+}
 .border{
   border: 2px solid #000;
   border-radius: 5px;
   padding: 5px;
   font-size: 10px;
+}
+.border2{
+  border: 2px solid #000;
+  border-radius: 5px;
+  width: 1200px;
+  padding: 10px;
 }
 
 .client-info div, .sale-conditions div {
@@ -76,9 +97,24 @@
   background-color: #8d1212;
   padding: 5px ;
   font-family: "Georgia";
- padding-bottom: 10px;
+  padding-bottom: 10px;
+  
+}
+.Links1 .links li{
+  display: inline-block;
+  padding: 0 20px;
+}
+.links a{
+  text-decoration: none ;
+  color: white;
 }
 .A{
   background-color: white;
   padding-bottom: 10px;
+}
+.Letra{
+  font-size: 30px;
+  position: absolute;
+  right: 560px;
+ 
 }
