--- a/src/App.css
+++ b/src/App.css
@@ -113,8 +113,13 @@ font-size: 15px;
   padding-bottom: 10px;
 }
 .Letra{
+  border: 2px solid #000;
+  border-radius: 5px;
   font-size: 30px;
   position: absolute;
   right: 560px;
  
+}
+.input1{
+  width: 260px;
 }
