--- a/src/FacturaB.css
+++ b/src/FacturaB.css
@@ -1,4 +1,4 @@
-.invoice-container {
+.invoice-container1 {
     width: 800px;
     margin: 0 auto;
     font-family: Arial, sans-serif;
@@ -6,71 +6,71 @@
     padding: 20px;
   }
   
-  header {
+  .header1 {
     display: flex;
     justify-content: space-between;
     border-bottom: 1px solid #000;
     padding-bottom: 10px;
   }
   
-  .header-left {
+  .header-left1 {
     flex: 1;
   }
   
-  .header-left {
+  .header-left1 {
     text-align: center;
   }
-  .fecha{
+  .fecha1{
     border: 1px solid #000;
     border-radius: 5px;
     background-color:  rgb(189, 127, 56);
     padding: 2px;
   }
   
-  .Letra{
+  .Letra1{
     border: 2px solid #000;
     height: 50%;
     border-radius: 5px;
     background-color: rgb(189, 127, 56);
   }
-  .header-right {
+  .header-right1 {
     flex: 1;
     text-align: left;
     padding-left: 100px;
   }
   
-  .header-right h1 {
+  .header-right1 h1 {
     margin: 0;
   }
   
-  .header-title h2 {
+  .header-title1 h2 {
     margin: 0;
     font-size: 24px;
   }
   
-  .header-title p {
+  .header-title1 p {
     margin: 2px 0;
   }
   
-  .client-info,
-  .tax-info,
-  .sale-conditions {
+  .client-info1,
+  .tax-info1,
+  .sale-conditions1 {
     display: flex;
     justify-content: space-between;
     margin-top: 20px;
     margin-bottom: 20px;
   }
 
-  .invoice-details {
+  .invoice-details1 {
     border-top: 1px solid #000;
     border-bottom: 1px solid #000;
     padding: 10px 0;
   }
-  .espacio{
+  .espacio1{
     padding-left: 30px;
   }
   
-  .invoice-header {
+  .invoice-header1 {
     display: flex;
     justify-content: space-between;
     border-bottom: 1px solid #000;
@@ -78,47 +78,47 @@
     margin-bottom: 5px;
   }
   
-  .invoice-item {
+  .invoice-item1 {
     display: flex;
     justify-content: space-between;
     margin-bottom: 5px;
   }
   
-  .invoice-item input {
+  .invoice-item1 input {
     padding: 5px;
   }
   
-  .cantidad-input {
+  .cantidad-input1 {
     width: 10%;
   }
   
-  .descripcion-input {
+  .descripcion-input1 {
     width: 50%;
   }
   
-  .precio-unitario-input {
+  .precio-unitario-input1 {
     width: 20%;
   }
   
-  .importe-input {
+  .importe-input1 {
     width: 20%;
   }
   
-  .invoice-footer {
+  .invoice-footer1 {
     display: flex;
     justify-content: space-between;
     margin-top: 20px;
   }
   
-  .invoice-footer div {
+  .invoice-footer1 div {
     display: flex;
     flex-direction: column;
   }
   
-  .invoice-footer input {
+  .invoice-footer1 input {
     width: 150px;
   }
   
-  .invoice-footer p {
+  .invoice-footer1 p {
     margin: 2px 0;
   }
